# sorairo

./: Cargo.toml  LICENSE  README.md  Sorairo.slnx
Sorairo/: App.axaml  App.axaml.cs  App.cs  MainWindow.cs  Program.cs  Sorairo.csproj  app.manifest  mise.toml
Sorairo/Common/Extensions/: ControlExtensions.cs  ObservableCollectionExtensions.cs  ServiceCollectionExtensions.cs
Sorairo/Common/Helpers/: FluentBinding.cs  FormatHelper.cs
Sorairo/Common/Interfaces/: IAppError.cs  IAudioService.cs  IPlaylistService.cs
Sorairo/Common/Messages/: OpenMultiFilesDialogMessage.cs  OpenSingleFileDialogMessage.cs
Sorairo/Common/Messaging/: OpenSingleFileDialogMessage.cs
Sorairo/Common/Models/: AppError.cs  AppMainView.cs  AppState.cs  AudioError.cs  AudioErrorKind.cs  AudioPlaybackStatus.cs  AudioState.cs  FrameProviderContext.cs  NotFoundError.cs  PlaylistError.cs  PlaylistErrorKind.cs  PlaylistItem.cs  PlaylistState.cs  RepeatMode.cs  ShuffleMode.cs
Sorairo/Common/Services/: MiniAudioService.cs  PlaylistService.cs
Sorairo/Common/UI/: Icons.cs  InitWindowBase.cs  LifecycleViewBase.cs  LifecycleWindowBase.cs  LightColors.cs  ViewBase.cs  ViewModelBase.cs  Viewport.cs  WindowBase.cs
Sorairo/Features/MainMenu/: MainMenuView.cs  MainMenuViewModel.cs
Sorairo/Features/NowPlaying/: NowPlayingView.cs  NowPlayingViewModel.cs
Sorairo/Features/Playlist/: PlaylistView.cs  PlaylistViewModel.cs
Sorairo/Features/Shell/: PlaylistVisibility.cs  ShellWindow.cs  ShellWindowViewModel.cs
src/: main.rs  player.rs  sorairo.rs
src/sorairo/: agnostic.rs  app.rs  audio.rs  windows.rs
(+10 files in other folders)
