[package]
name = "sorairo"
version = "0.1.0"
edition = "2024"

[dependencies]
cpal = "0.17.3"
crossbeam-channel = "0.5.15"
eframe = { version = "0.33.3", features = ["default"] }
egui_extras = "0.33.3"
env_logger = { version = "0.11.9", features = ["auto-color", "humantime"] }
lofty = "0.23.2"
log = "0.4.29"
rfd = "0.17.2"
rodio = { version = "0.22.1", features = ["default"] }
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Media_Audio",
    "Win32_UI_Shell_PropertiesSystem",
] }
windows-core = "0.62.2"
